# bazel-public-registry

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: on_pull_request.yml
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/11.3.1.iw.0/: MODULE.bazel  source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/11.3.1.iw.1/: MODULE.bazel  source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/12.3.1.iw.0/: source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/12.3.1.iw.1/: MODULE.bazel  source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/13.3.1.iw.0/: MODULE.bazel  source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/13.3.1.iw.1/: MODULE.bazel  source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/14.3.1.iw.0/: MODULE.bazel  source.json
modules/arm_gnu_toolchain_linux_x86_64_aarch64_none_linux_gnu/15.2.1.iw.0/: MODULE.bazel  source.json
modules/aws-c-auth/0.7.22.iw.1/: MODULE.bazel
modules/aws-c-auth/0.7.22.iw.2/: MODULE.bazel  source.json
modules/aws-c-auth/0.9.0.iw.1/: MODULE.bazel  source.json
modules/aws-c-cal/0.7.1.iw.1/: MODULE.bazel  source.json
modules/aws-c-cal/0.7.1.iw.2/: MODULE.bazel  source.json
modules/aws-c-cal/0.8.8.iw.1/: MODULE.bazel  source.json
modules/aws-c-common/0.12.2.iw.1/: MODULE.bazel  source.json
modules/aws-c-common/0.9.23.iw.1/: MODULE.bazel  source.json
modules/aws-c-common/0.9.23.iw.2/: MODULE.bazel  source.json
modules/aws-c-common/0.9.23.iw.3/: MODULE.bazel  source.json
modules/aws-c-compression/0.2.18.iw.1/: MODULE.bazel  source.json
modules/aws-c-compression/0.2.18.iw.2/: MODULE.bazel  source.json
modules/aws-c-compression/0.3.1.iw.1/: MODULE.bazel  source.json
modules/aws-c-event-stream/0.4.2.iw.1/: MODULE.bazel
modules/aws-c-event-stream/0.4.2.iw.2/: MODULE.bazel  source.json
modules/aws-c-event-stream/0.5.4.iw.1/: MODULE.bazel  source.json
modules/aws-c-http/0.8.3.iw.1/: MODULE.bazel
modules/aws-c-http/0.8.3.iw.2/: MODULE.bazel  source.json
modules/aws-c-http/0.8.3.iw.3/: MODULE.bazel  source.json
modules/aws-c-io/0.14.11.iw.1/: MODULE.bazel
modules/aws-c-io/0.14.11.iw.2/: MODULE.bazel  source.json
modules/aws-c-io/0.14.11.iw.3/: MODULE.bazel  source.json
modules/aws-c-io/0.17.1.iw.1/: MODULE.bazel  source.json
modules/aws-c-mqtt/0.10.4.iw.1/: MODULE.bazel  source.json
modules/aws-c-mqtt/0.10.4.iw.2/: MODULE.bazel  source.json
modules/aws-c-mqtt/0.12.2.iw.1/: MODULE.bazel  source.json
modules/aws-c-s3/0.6.1.iw.1/: MODULE.bazel  source.json
modules/aws-c-s3/0.6.1.iw.2/: MODULE.bazel  source.json
modules/aws-c-s3/0.7.13.iw.1/: MODULE.bazel  source.json
modules/aws-c-sdkutils/0.1.16.iw.1/: MODULE.bazel  source.json
modules/aws-c-sdkutils/0.1.16.iw.2/: MODULE.bazel  source.json
modules/aws-c-sdkutils/0.2.3.iw.1/: MODULE.bazel  source.json
modules/aws-checksums/0.1.18.iw.1/: MODULE.bazel  source.json
modules/aws-checksums/0.1.18.iw.2/: MODULE.bazel  source.json
modules/aws-checksums/0.2.6.iw.1/: MODULE.bazel  source.json
modules/aws-crt-cpp/0.27.3.iw.1/: MODULE.bazel
modules/aws-crt-cpp/0.27.3.iw.2/: MODULE.bazel  source.json
modules/aws-crt-cpp/0.27.3.iw.3/: MODULE.bazel  source.json
modules/aws-crt-cpp/0.32.4.iw.1/: MODULE.bazel  source.json
modules/azure_c_shared_utility/2022.07.0-92-g772a4f8b.iw.0/: MODULE.bazel  source.json
modules/azure_c_shared_utility/2022.07.0-92-g772a4f8b.iw.1/: MODULE.bazel  source.json
modules/azure_iot_sdk_c/2023.08.0.iw.0/: MODULE.bazel  source.json
modules/azure_iot_sdk_c/2023.08.0.iw.1/: MODULE.bazel  source.json
modules/azure_macro_utils_c/0.0.0-0-g5926caf4.iw.0/: MODULE.bazel  source.json
modules/azure_uamqp_c/2022.07.0-23-gefd1b1b.iw.0/: MODULE.bazel  source.json
modules/azure_umock_c/2017.02.24-228-g504193e.iw.0/: MODULE.bazel  source.json
modules/azure_umqtt_c/2022.07.0-26-g457e5af.iw.0/: MODULE.bazel  source.json
modules/behavior_tree_cpp/4.6.2-19-g48f6c5b/: MODULE.bazel  source.json
modules/behavior_tree_cpp/4.6.2-19-g48f6c5b.iw.0/: MODULE.bazel  source.json
modules/behavior_tree_cpp/4.6.2-19-g48f6c5b.iw.1/: MODULE.bazel  source.json
modules/behavior_tree_cpp/4.6.2-19-g48f6c5b.iw.2/: MODULE.bazel  source.json
modules/bond/4.1.0.iw.1/: MODULE.bazel  source.json
modules/bond/4.1.0.iw.jazzy.1/: MODULE.bazel  source.json
modules/bsdiff/v4.3-endsley-15-g7b01c81/: MODULE.bazel  source.json
modules/bsdiff/v4.3-endsley-15-g7b01c81/overlay/: BUILD.bazel
modules/com_github_alexkaravaev_csm/1.0.2-13-g0c5fedd.iw.humble.1/: MODULE.bazel  source.json
modules/com_github_alexkaravaev_csm/1.0.2-13-g0c5fedd.iw.jazzy.1/: MODULE.bazel  source.json
modules/com_github_alexkaravaev_csm/1.0.2-13-g0c5fedd.iw.jazzy.2/: MODULE.bazel  source.json
modules/com_github_mvukov_rules_ros2/1.0.0.eddy.1/: MODULE.bazel  source.json
modules/com_github_mvukov_rules_ros2/1.0.0.eddy.2/: MODULE.bazel  source.json
modules/com_github_mvukov_rules_ros2/2.0.0.eddy.1/: MODULE.bazel  source.json
modules/com_github_mvukov_rules_ros2/2.0.0.eddy.2/: MODULE.bazel  source.json
modules/fast_cdr/v1.0.28.iw.1/overlay/: BUILD.bazel
modules/gpgme/gpgme-2.0.1-28-g53c8f291/overlay/: BUILD.bazel
modules/gpgme/gpgme-2.0.1-28-g53c8f291/overlay/conf/: config.h
modules/libassuan/libassuan-3.0.2-16-ge71eb3e/overlay/: BUILD.bazel
modules/libassuan/libassuan-3.0.2-16-ge71eb3e/overlay/src/: config.h
modules/libglnx/v2017.2-184-gde29c5f/overlay/: BUILD.bazel  libglnx-config.h
modules/libgpg-error/libgpg-error-1.59-7-ge5a81da/overlay/: BUILD.bazel
modules/libgpg-error/libgpg-error-1.59-7-ge5a81da/overlay/src/: config.h
scripts/: BUILD.bazel  add_module_to_ws.py  apply_ws_module_to_registry.py  calc-integrity.sh  create_workspace.py  utils.py  version.py
scripts/bootstrap_arm/: BUILD.bazel  bootstrap_arm_toolchain.py
scripts/bootstrap_arm/template/: MODULE.bazel.tpl  main_BUILD.bazel.tpl
scripts/ci/: BUILD.bazel  diff_package_versions.py  verify_integrities.py
(+934 files in other folders)
