module(
    name = "bazel_public_registry",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.9.0-rc1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "iw_bpr_deps",
    python_version = "3.12",
    requirements_lock = "//third_party:requirements_lock.txt",
)
use_repo(pip, "iw_bpr_deps")
