load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

expand_template(
    name = "gen_gpgme_h",
    out = "src/gpgme.h",
    substitutions = {
        "@GPGME_CONFIG_HOST@": "linux-gnu",
        "@PACKAGE_VERSION@": "2.0.1",
        "@VERSION_NUMBER@": "0x020001",
        "@INSERT__TYPEDEFS_FOR_GPGME_H@": "\n#include <sys/types.h>\ntypedef off_t   gpgme_off_t;\ntypedef ssize_t gpgme_ssize_t;",
        "@NEED__FILE_OFFSET_BITS@": "0",
        "@API__SSIZE_T@": "ssize_t",
        "@API__OFF_T@": "off_t",
        "@emacs_local_vars_begin@": "Local Variables:",
        "@emacs_local_vars_read_only@": "buffer-read-only: t",
        "@emacs_local_vars_end@": "End:",
    },
    template = "src/gpgme.h.in",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "gpgme",
    srcs = [
        "src/assuan-support.c",
        "src/conversion.c",
        "src/data.c",
        "src/data-compat.c",
        "src/data-estream.c",
        "src/data-fd.c",
        "src/data-identify.c",
        "src/data-mem.c",
        "src/data-stream.c",
        "src/data-user.c",
        "src/debug.c",
        "src/decrypt.c",
        "src/decrypt-verify.c",
        "src/delete.c",
        "src/dirinfo.c",
        "src/edit.c",
        "src/encrypt.c",
        "src/encrypt-sign.c",
        "src/engine.c",
        "src/engine-assuan.c",
        "src/engine-g13.c",
        "src/engine-gpg.c",
        "src/engine-gpgconf.c",
        "src/engine-gpgsm.c",
        "src/engine-spawn.c",
        "src/engine-uiserver.c",
        "src/error.c",
        "src/export.c",
        "src/genkey.c",
        "src/genrandom.c",
        "src/get-env.c",
        "src/getauditlog.c",
        "src/gpgconf.c",
        "src/gpgme.c",
        "src/import.c",
        "src/key.c",
        "src/keylist.c",
        "src/keysign.c",
        "src/mbox-util.c",
        "src/op-support.c",
        "src/opassuan.c",
        "src/parsetlv.c",
        "src/passphrase.c",
        "src/passwd.c",
        "src/posix-io.c",
        "src/posix-util.c",
        "src/progress.c",
        "src/queryswdb.c",
        "src/revsig.c",
        "src/setexpire.c",
        "src/setownertrust.c",
        "src/sig-notation.c",
        "src/sign.c",
        "src/signers.c",
        "src/spawn.c",
        "src/status-table.c",
        "src/tofupolicy.c",
        "src/verify.c",
        "src/version.c",
        "src/vfs-create.c",
        "src/vfs-mount.c",
        "src/wait.c",
        "src/wait-global.c",
        "src/wait-private.c",
        "src/wait-user.c",
    ],
    hdrs = [
        "conf/config.h",
        "src/context.h",
        "src/data.h",
        "src/debug.h",
        "src/engine.h",
        "src/engine-backend.h",
        "src/mbox-util.h",
        "src/ops.h",
        "src/parsetlv.h",
        "src/priv-io.h",
        "src/sema.h",
        "src/sys-util.h",
        "src/util.h",
        "src/wait.h",
        ":gen_gpgme_h",
    ],
    copts = ["-std=gnu11"],
    includes = [
        "conf",
        "src",
    ],
    linkopts = ["-lpthread"],
    local_defines = [
        "HAVE_CONFIG_H",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@libassuan",
        "@libgpg-error",
    ],
)
